Made classes auto generate from xsd project file on pre-build. Added the auto generated file to .gitignore.

--- a/Mappie/Mappie.csproj
+++ b/Mappie/Mappie.csproj
@@ -69,6 +69,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Project\Project_schema.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -101,7 +102,12 @@
   <ItemGroup>
     <Resource Include="Examples\Project.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>call "%25VS140COMNTOOLS%25VsDevCmd.bat"
+xsd /c "$(ProjectDir)Examples\Project_schema.xsd" /o:"$(ProjectDir)Project" /n:Mappie.Project</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
